# lmcalc

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmd  dependencies.sh  install-dependencies.cmd  install-dependencies.sh
forms/: main_window.ui
include/: big_integer.h  constants.h  main_window.h  operation.h
include/lmcalc/: operation.h
include/longmath_calculator/: constants.h  main_window.h  operation.h
scripts/: Dependencies.cmd  dependencies.cmd  dependencies.sh
src/: CMakeLists.txt  big_integer.cpp  main.cpp  main_window.cpp  main_window.ui
